# hellogit

./: .ansible-lint  .bandit  .bot.yml  .dev_bash_functions  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitlint  Jenkinsfile  README.md  TODO.txt  aliases  bootstrap.sh  code-analysis.yml  dip.export.gitlab-ci.yml  dip.gitlab-ci.yml  esx_cli_notes  gip.export.gitlab-ci.yml  gip.gitlab-ci.yml  manifest.yaml  mip.export.gitlab-ci.yml  mip.gitlab-ci.yml  powershell.gitlab-export.yml  pylint.rc  release-doc-manifest.yaml  repo.export.gitlab-ci.yml  repo.gitlab-ci.yml  requirements.txt  settings.json  tatus  test_drives_cmds.sh  versions.yml
.spec/: tfplenum-repos.spec  tfplenum.spec
Jenkinsfiles/: Jenkins  Jenkinsfile-2-0-2  Jenkinsfile-2-1-1  Jenkinsfile-2-2-0
agent_pkgs/: install.ps1  uninstall.ps1
backend/: test.py
bro/: 2.6.1.Dockerfile  crontab
changelogs/: 3.7.4.0.md  3.7.5.0.md  3.8.0.0.md  index.md
charts/: README.md  update-charts.py
component-builder/: README.md  build.py  builder.gitlab-ci.yml  cleanup-nexus.sh  update_charts.py
component-builder/pipeline-images/changelog/: Dockerfile  README.md  build.sh  pyproject.toml
component-builder/pipeline-images/changelog/changelog/: cli.py  commands.py  gitrepo.py  logg.py  toc.py  version_helper.py
component-builder/pipeline-images/changelog/tests/: test_changelog.py  test_cli.py  test_commands.py  test_git.py  test_toc.py  test_version_helper.py
containers/: .gitignore
core/: .gitignore  requirements-py2.txt  requirements.txt
deployer/: bootstrap.sh
(+4604 files in other folders)
